# ResistanceId

./: .gitignore  README.md
images/: genNegTxt.py  neg.txt
scripts/: createsamples.py  renamenegs.py  renamepos.py  traincascades.py
src/lib/: CMakeLists.txt  utils.cpp  utils.h
src/main/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
src/sandbox/: CMakeLists.txt  main.cpp  testFuncs.cpp  testWrappers.cpp  testWrappers.h
